--- a/breifly/breiflyplatform/templates/partials/not_authenticated_navbar.html
+++ b/breifly/breiflyplatform/templates/partials/not_authenticated_navbar.html
@@ -3,26 +3,8 @@
 
   <!-- Logo and Heading -->
   <div class="d-flex align-items-center flex-grow-1 justify-content-center text-center">
-    <img src="../../static/assets/images/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;">
-    <h1 class="mb-0" style="font-size: 1.5rem; color: black">Briefly</h1>
+    <h1 class="mb-0" style="font-size: 2.0rem; color: black; font-weight: bold;">Invecta</h1>
   </div>
-    <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-        Language
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-        {% get_current_language as LANGUAGE_CODE %}
-        {% get_available_languages as LANGUAGES %}
-        {% for lang_code, lang_name in LANGUAGES %}
-        <li>
-            <form action="{% url 'set_language' %}" method="POST" style="display: inline;">
-                {% csrf_token %}
-                <input type="hidden" name="language" value="{{ lang_code }}">
-                <button type="submit" class="dropdown-item">{{ lang_name }}</button>
-            </form>
-        </li>
-        {% endfor %}
-    </ul>
 </div>
 
 </div>
