login  finally working

--- a/breifly/breiflyplatform/templates/loginForm.html
+++ b/breifly/breiflyplatform/templates/loginForm.html
@@ -147,22 +147,22 @@
     <!-- Left Container: Login Form -->
     <div class="form-container">
         <div class="login-form">
-            <h2>{% trans "Bienvenido de nuevo." %}</h2>
-            <p>{% trans "Por favor ingresa tus datos." %}</p>
-            <label for="email" class="form-label">{% trans "Correo electrónico" %}</label>
-            <input type="email" class="form-control" id="email" placeholder="{% trans 'Introduce tu correo electrónico' %}" required>
+            <h2>Bienvenido de nuevo.</h2>
+            <p>Por favor ingresa tus datos.</p>
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="email" placeholder="Introduce tu correo electrónico" required>
             
-            <label for="password" class="form-label">{% trans "Contraseña" %}</label>
-            <input type="password" class="form-control" id="password" placeholder="{% trans 'Introduce tu contraseña' %}" required>
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" placeholder="Introduce tu contraseña" required>
             
-            <button class="btn-primary" type="button" onclick="loginViaJSON()">{% trans "Iniciar sesión" %}</button>
+            <button class="btn-primary" type="button" onclick="loginViaJSON()">Iniciar sesión</button>
             
             <!-- Reusable stylized message box (Bootstrap Alert) -->
             <div id="messageBox" class="alert d-none" role="alert"></div>
 
-{#            <div class="form-footer">#}
-{#                <a href="#">{% trans "¿Has olvidado tu contraseña?" %}</a>#}
-{#            </div>#}
+           <div class="form-footer">
+             <a href="#">¿Has olvidado tu contraseña?</a>
+            </div>
         </div>
     </div>
 
@@ -170,3 +170,6 @@
     <div class="image-container">
     </div>
 </div>
+
+<script>
+</script>
