--- a/breifly/breiflyplatform/templates/admin_dashboard.html
+++ b/breifly/breiflyplatform/templates/admin_dashboard.html
@@ -1,5 +1,7 @@
-{% include 'header.html' %}
-
-<div>
-  <h1>kjhkjasdkajss</h1>
-</div>
+<!-- Remove dependencies -->
+<!DOCTYPE html>
+<html>
+<body>
+  <h1>Test Admin Page</h1>
+</body>
+</html>
