Creating user management page

--- a/breifly/breiflyplatform/templates/admin_dashboard.html
+++ b/breifly/breiflyplatform/templates/admin_dashboard.html
@@ -5,10 +5,10 @@
         <h1 class="mb-5 text-center" style="font-size: 2.8rem; font-weight: 500;">Panel de Administración</h1>
 
         <div class="d-flex justify-content-center">
-            <a href="#" class="btn btn-primary btn-lg mx-4 px-5 py-3 rounded-pill shadow-sm border" style="font-size: 1.2rem; transition: transform 0.2s ease-in-out;">
+            <a href="{% url 'user_management_page' %}" class="btn btn-primary btn-lg mx-4 px-5 py-3 rounded-pill shadow-sm border" style="font-size: 1.2rem; transition: transform 0.2s ease-in-out;">
                 Gestionar Usuarios
             </a>
-            <a href="#" class="btn btn-success btn-lg mx-4 px-5 py-3 rounded-pill shadow-sm border" style="font-size: 1.2rem; transition: transform 0.2s ease-in-out;">
+            <a href="{% url 'item_management_page' %}" class="btn btn-success btn-lg mx-4 px-5 py-3 rounded-pill shadow-sm border" style="font-size: 1.2rem; transition: transform 0.2s ease-in-out;">
                 Gestionar Artículos
             </a>
         </div>
