--- a/breifly/breiflyplatform/templates/stock_management.html
+++ b/breifly/breiflyplatform/templates/stock_management.html
@@ -6,7 +6,7 @@
 
     <div class="row mt-4">
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary btn-lg btn-block">Pagina anterior</a>
+            <a href="{% url 'admin' %}" class="btn btn-primary btn-lg btn-block">Pagina anterior</a>
         </div>
     </div>
 
