trying to add the delete functionality

--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -12,6 +12,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'styles/watermark.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     
     {% block extra_css %}
     {% endblock %}
