--- a/breifly/breiflyplatform/templates/user_management.html
+++ b/breifly/breiflyplatform/templates/user_management.html
@@ -23,7 +23,11 @@
                 </div>
                 <div>
                     <a href="#" class="btn btn-sm btn-primary mx-1" style="width: 80px; display: inline-block;">Editar</a>
-                    <a href="#" class="btn btn-sm btn-danger mx-1" style="width: 80px; display: inline-block;">Eliminar</a>
+                    <a href="#" class="btn btn-sm btn-danger mx-1 delete-user-btn" 
+                    onclick="deleteUser('{{ user.id }}')"
+                    data-user-id="{{ user.id }}"
+                    style="width: 80px; display: inline-block;">Eliminar</a>
+             </div>
                 </div>
             </li>
             {% endfor %}
@@ -61,3 +65,66 @@
         transform: translateY(-3px);
     }
 </style>
+
+<script>
+    function deleteUser(userId) {
+        Swal.fire({
+            title: 'Estas seguro?',
+            text: "¡No podrás revertir esto!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: 'Sí, ¡eliminalo!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch(`/delete-user/${userId}/`, {
+                    method: 'DELETE',
+                    headers: {
+                        "Content-Type": "application/json",
+                        "X-CSRFToken": getCSRFToken(),
+                    },
+                })
+                .then(response => {
+                    if (response.ok) {
+                        Swal.fire(
+                            '¡Eliminado!',
+                            'El usuario ha sido eliminado.',
+                            'success'
+                        );
+                        document.querySelector(`[data-user-id="${userId}"]`).closest('li').remove();
+                    } else {
+                        Swal.fire(
+                            'Error!',
+                            'No se pudo eliminar el usuario.',
+                            'error'
+                        );
+                    }
+                })
+                .catch(error => {
+                    Swal.fire(
+                        'Error!',
+                        'Se produjo un error.',
+                        'error'
+                    );
+                });
+            }
+        });
+    }
+
+    // Function to get CSRF token from cookies
+    function getCSRFToken() {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, 'csrftoken='.length) === 'csrftoken=') {
+                    cookieValue = decodeURIComponent(cookie.substring('csrftoken='.length));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+</script>
