--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -36,6 +36,7 @@
     <script src="{% static 'scripts/background_gradient.js' %}"></script>
     <script src="{% static 'scripts/watermark.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/login.js' %}"></script>
+    <script src="{% static 'scripts/ajax_scripts/deleteUser.js' %}"></script>
     
      <!-- Cookie Statement -->
     {% block extra_js %}
