--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -38,6 +38,7 @@
     <script src="{% static 'scripts/ajax_scripts/login.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/updateUser.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/deleteUser.js' %}"></script>
+    <script src="{% static 'scripts/ajax_scripts/deleteItem.js' %}"></script>
     
      <!-- Cookie Statement -->
     {% block extra_js %}
