--- a/breifly/breiflyplatform/templates/stock_management.html
+++ b/breifly/breiflyplatform/templates/stock_management.html
@@ -22,7 +22,10 @@
                 </div>
                 <div>
                     <a href="#" class="btn btn-sm btn-primary mx-1" style="width: 80px; display: inline-block;">Editar</a>
-                    <a href="#" class="btn btn-sm btn-danger mx-1" style="width: 80px; display: inline-block;">Eliminar</a>
+                    <a href="#" class="btn btn-sm btn-danger mx-1 delete-user-btn"
+                       onclick="deleteItem('{{ item.item_id }}')"
+                       data-user-id="{{ item.item_id }}"
+                       style="width: 80px; display: inline-block;">Eliminar</a>
                 </div>
             </li>
             {% endfor %}
