--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -39,7 +39,7 @@
     <script src="{% static 'scripts/ajax_scripts/updateUser.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/deleteUser.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/deleteItem.js' %}"></script>
-    
+    <script src="{% static 'scripts/ajax_scripts/updateItem.js' %}"></script>
      <!-- Cookie Statement -->
     {% block extra_js %}
     {% endblock %}
